--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,2 +1,39 @@
 
+@tailwind base;
+
+@tailwind components;
+
+.button {
+    @apply .bg-button .text-default .no-underline .rounded-lg .text-sm .px-5 .py-2;
+    box-shadow: 0 2px 7px 0 #b0eaff;
+}
+
+.card {
+    @apply .bg-card .p-6 .rounded-lg .shadow;
+    color: var(--text-default-color);
+}
+
+@tailwind utilities;
+
+.theme-light {
+    --page-background-color: #F5F6F9;
+    --card-background-color: white;
+    --button-background-color: #47cdff;  // #47cdff
+    --header-background-color: white;
+
+    --text-default-color: #222;
+}
+
+.theme-dark {
+    --page-background-color: #17181E;
+    --card-background-color: #1F2027;
+    --button-background-color: #59B6F9;
+    --header-background-color: #1F2027;
+
+    --text-default-color: #fff;
+}
+
+
+
+
 
